--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>Mi portafolio</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     </header>
     <main>
         <div class="container">
-            <img src="./img/foto_perfil.jpg" alt="" srcset="">
+            <img src="./img/foto_perfil.jpg" alt="foto_perfil" srcset="">
             <h1>Christian Dev</h1>
             <p>
                 Bienvenido a mi portafolio personal. Espero que encuentres algo interesante.
@@ -30,9 +31,10 @@
         <nav id="nav-footer">
             <h2>Contacto</h2>
             <ul>
-                <li>LinkedIn</li>
-                <li>GitHub</li>
-                <li>WhatsApp</li>
+
+                <li><a href="https://www.linkedin.com/in/chrismhm/">LinkedIn</a></li>
+                <li><a href="https://github.com/ChrisMHM">GiHub</a></li>
+                <li><a href="https://www.instagram.com/kurisuteian/">Instagram</a></li>
             </ul>
         </nav>
     </footer>
