--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         <nav id="nav-footer">
             <h2>Contacto</h2>
             <ul>
-
-                <li><a href="https://www.linkedin.com/in/chrismhm/">LinkedIn</a></li>
-                <li><a href="https://github.com/ChrisMHM">GiHub</a></li>
-                <li><a href="https://www.instagram.com/kurisuteian/">Instagram</a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/chrismhm/">LinkedIn</a></li>
+                <li><a target="_blank" href="https://github.com/ChrisMHM">GiHub</a></li>
+                <li><a target="_blank" href="https://www.instagram.com/kurisuteian/">Instagram</a></li>
             </ul>
         </nav>
     </footer>
